gcc/testsuite/gdc.test/runnable/imports/test10441b.d

public import test10441c;

auto foo()()
    if (boo(1))
{
    return 1;
}

