gcc/testsuite/gdc.test/fail_compilation/imports/test21164d.d
auto AB()
{
static if}

auto I()
{
AB;
}

